Update עדכון שבועי “ניסיון-3”

--- a/content/weekly-update/ניסיון-3.md
+++ b/content/weekly-update/ניסיון-3.md
@@ -5,3 +5,7 @@ subtitle: "תת כותרת "
 img: /img/screen-shot-2021-05-29-at-13.24.33.png
 ---
 שדגדשגשדשדג
+
+
+
+![](/img/screen-shot-2020-12-29-at-10.58.21.png "תמונה")
