team grid component

--- a/content/team/זיו-רייכרט.md
+++ b/content/team/זיו-רייכרט.md
@@ -1,16 +1,17 @@
 ---
 title: גבי דיוויס
-firstname: 'גבי '
+firstname: "גבי "
 lastname: דיוויס
 img: /img/pics/whatsapp-image-2020-08-27-at-19.22.59-1-.jpeg
-index: '9'
+index: "9"
 ---
+
 **גבי דיוויס, בת 31 - קפטנית**
 
 **חמש שנות נסיון בגני ילדים - שנה ראשונה בגן **
 
-**<br>**
+**<br/>**
 
-כשאני חושבת על זה, התפקיד היחיד שהיה לי אי פעם הוא לעבוד עם ילדים. במהלך השנים זכיתי לעבוד עם ילדות וילדים בכל הגילאים: מתינוקות ועד בני נוער בבתי ספר, קייטנות וגני ילדים. בכל משרה למדתי משהו חדש, רכשתי מיומנויות, ואתגרתי את עצמי להיות טובה יותר. 
+כשאני חושבת על זה, התפקיד היחיד שהיה לי אי פעם הוא לעבוד עם ילדים. במהלך השנים זכיתי לעבוד עם ילדות וילדים בכל הגילאים: מתינוקות ועד בני נוער בבתי ספר, קייטנות וגני ילדים. בכל משרה למדתי משהו חדש, רכשתי מיומנויות, ואתגרתי את עצמי להיות טובה יותר.
 
 ככל שהשנים עברו, הרגשתי שהכלים והידע שצברתי מאפשרים לי לעבוד בבטחון רב יותר מול ילדים עם צרכים שונים. האחריות שלי כמחנכת היא לזהות ולהבין לעומק את הצרכים של הילדים, ולהתחבר אליהם ממקום אנושי, מעניק ומכבד. אני שמחה לקום בכל בוקר לעבוד בגן בו אני יכולה להמשיך ללמוד ולהתפתח, כדי להיות שם למען הילדים ולהעניק להם אהבה ובטחון. לכל מחנכת בגן שלנו סגנון מיוחד ומכולן אפשר ללמוד משהו חדש. במובן הזה, אני חושבת שילדי והורי הגן זכו וגם אנחנו. אני מרגישה בת מזל לעבוד בגן שיש לו ולמחנכות בו סטדנרט מקצועי ואנושי כל כך גבוה.
