--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -1,14 +1,15 @@
 ---
 title: חן
-firstname: 'חנצ''וק '
+firstname: "חנצ'וק "
 lastname: אלחדיף
 img: /img/pics/חן.jpeg
-index: '12'
+index: "12"
 ---
+
 **חן אלחדיף, בת 32 - מנהלת המטבח **
 
 **בוגרת לימודי פסיכותרפיה גופנית - שנה רביעית בגן**
 
-<br>
+<br/>
 
 חן המכונה באוז'ה היא חברת ילדות של אחינועם ומככבת כבשלנית הבית בגן שלנו. בנוסף ללימודי הפסיכותרפיה, לחן תואר ראשון בלימודי מזרח אסיה ואמנות רב-תחומית. מעבר לידי הזהב וליכולות הבישול, האפייה והיצירה המופלאות שלה, בתפקידה הבלתי פורמאלי, היא גם "הפסיכולוגית" של צוות הגן ומקרבת הלבבות של הקהילה שלנו.
