--- a/content/team/ישראל-ישראלי.md
+++ b/content/team/ישראל-ישראלי.md
@@ -1,15 +1,16 @@
 ---
-title: 'רוני '
-firstname: 'רוני '
-lastname: 'שפר '
+title: "רוני "
+firstname: "רוני "
+lastname: "שפר "
 img: /img/pics/‏‏לכידה.png
-index: '15'
+index: "15"
 ---
+
 **רוני שפר, בת 23 - מחנכת מחליפה**
 
 **המתופפת האגדית של להקת "הזאבות", אומנית פלסטית. חמש שנים בחינוך - שנה ראשונה בגן**
 
-**<br>**
+**<br/>**
 
 ההיכרות הראשונה שלי עם תחום החינוך החלה כשהדרכתי שכבה צעירה ממני כשלמדתי בבית אקשטיין. אני וחברותי היינו ''פליטות'' של מערכת החינוך המסורתית והרגשנו תחושת מחויבות והזדהות עמוקה עם התלמידים הצעירים שגם כן למדו במסגרת של חינוך מיוחד. החוויה הזו, בסופו של דבר, הובילה אותי להצטרף ל''תנועת תרבות'' בה נחשפתי באופן מעמיק לפילוסופיות ושיטות חינוך שונות. עבדתי בתקופה הזאת כמדריכה לכיתות ה'-ו' וגם לתלמידי תיכון. לאחר מכן שירתתי בצבא במסלול נח''ל כמורה חיילת שם עבדתי עם נוער בסיכון.
 
