team-grid & logo in nav & footer menu & favicon

--- a/content/team/זיו-רייכרט.md
+++ b/content/team/זיו-רייכרט.md
@@ -3,7 +3,7 @@ title: גבי דיוויס
 firstname: "גבי "
 lastname: דיוויס
 img: /img/pics/whatsapp-image-2020-08-27-at-19.22.59-1-.jpeg
-index: "9"
+index: 12
 ---
 
 **גבי דיוויס, בת 31 - קפטנית**
