--- a/content/team/ישראל-ישראלי.md
+++ b/content/team/ישראל-ישראלי.md
@@ -3,7 +3,7 @@ title: "רוני "
 firstname: "רוני "
 lastname: "שפר "
 img: /img/pics/‏‏לכידה.png
-index: "15"
+index: 14
 ---
 
 **רוני שפר, בת 23 - מחנכת מחליפה**
