--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -3,7 +3,7 @@ title: ענת
 firstname: "ענת "
 lastname: ליידריך
 img: /img/pics/image_6487327.jpg
-index: "15"
+index: 15
 ---
 
 ענת ליידריך, בת 31- מחנכת
