--- a/content/team/רעות.md
+++ b/content/team/רעות.md
@@ -3,7 +3,8 @@ title: ימית
 firstname: ימית
 lastname: גויטע
 img: /img/pics/14690886_10210986222993055_7974594543976767151_n.jpg
-index: "11"
+index: 17
+unique: 11
 ---
 
 **ימית גויטע, בת 38 - מחנכת**
