--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -3,7 +3,7 @@ title: חן
 firstname: "חנצ'וק "
 lastname: אלחדיף
 img: /img/pics/חן.jpeg
-index: "12"
+index: 13
 ---
 
 **חן אלחדיף, בת 32 - מנהלת המטבח **
