--- a/content/team/צופית.md
+++ b/content/team/צופית.md
@@ -3,7 +3,7 @@ title: "צופית "
 firstname: צופית
 lastname: חנניה
 img: /img/pics/whatsapp-image-2019-05-31-at-09.56.24.jpeg
-index: "15"
+index: 16
 ---
 
 **צופית חנניה- מייסדת הגן והאם הרוחנית שלנו**
