--- a/content/products/המוצרים-החינוכיים-שלנו.md
+++ b/content/products/המוצרים-החינוכיים-שלנו.md
@@ -4,9 +4,15 @@ subtitle: אנחנו מציעים מגוון מוצרים חינוכיים
 video1_title: הנה דוגמה בסרטון
 video1: /assets/pics/uploads/dummyvid.mp4
 video2_title: הנה עוד דוגמה
-video3_title: " "
+video2: ""
+video3_title: ""
+video3: ""
 ---
+
 ## יש לנו קורס כזה וכזה
+
 ואחנו עושים בו ככה וככה
+
 ## יש גם קורס כהנא וכהנא
+
 ששם אנחנו עושים זה וזה
