--- a/content/home/כתבה-עלינו-1.md
+++ b/content/home/כתבה-עלינו-1.md
@@ -1,5 +1,5 @@
 ---
 title: כתבה עלינו 1
-link_to_story: https://www.google.com//search?q=גן+ילדי+הטבע
+link_to_article: https://www.google.com//search?q=גן+ילדי+הטבע
 img: /assets/pics/uploads/ahinoam.jpg
 ---
