--- a/content/home/כתבה-עלינו-2.md
+++ b/content/home/כתבה-עלינו-2.md
@@ -1,5 +1,5 @@
 ---
 title: כתבה עלינו 2
-link_to_story: https://www.google.com//search?q=גן+ילדי+הטבע+הדמוקרטי
+link_to_article: https://www.google.com//search?q=גן+ילדי+הטבע+הדמוקרטי
 img: /assets/pics/uploads/linkedin_backgroung_pic.jpg
 ---
