--- a/content/products/המוצרים-החינוכיים-שלנו.md
+++ b/content/products/המוצרים-החינוכיים-שלנו.md
@@ -4,6 +4,15 @@ subtitle: קורסים חינוכיים שאנחנו מעבירים
 video1_title: הנה דוגמא בסרטון
 video1: /assets/pics/uploads/dummyvid.mp4
 video2_title: הטקסט פה לא אמור להופיע באתר כי לא צורף סרטון
+products_images:
+  - alt: מוצר 1
+    src: /assets/pics/uploads/1111.png
+  - alt: מוצר 2
+    src: /assets/pics/uploads/10842085_10202867450396813_327328370662932325_o.jpg
+products_videos:
+  - video: /assets/pics/uploads/dummyvid.mp4
+  - video_title: סרטון מוצר 2
+    video: /assets/pics/uploads/dummyvid.mp4
 ---
 ## יש קורס כזה וכזה
 ששם אנחנו עושים ככה וככה
