Update מוצרים חינוכיים “המוצרים-החינוכיים-שלנו”

--- a/content/products/המוצרים-החינוכיים-שלנו.md
+++ b/content/products/המוצרים-החינוכיים-שלנו.md
@@ -1,9 +1,8 @@
 ---
-title: המוצרים החינוכיים שלנו
-subtitle: קורסים חינוכיים שאנחנו מעבירים
 video1_title: הנה דוגמא בסרטון
-video1: /assets/pics/uploads/dummyvid.mp4
 video2_title: הטקסט פה לא אמור להופיע באתר כי לא צורף סרטון
+title: המוצרים החינוכיים שלנו
+imgs_and_vids_title: הנה כמה תמונות מהקורסים שלנו
 products_images:
   - alt: מוצר 1
     src: /assets/pics/uploads/1111.png
@@ -13,6 +12,8 @@ products_videos:
   - video: /assets/pics/uploads/dummyvid.mp4
   - video_title: סרטון מוצר 2
     video: /assets/pics/uploads/dummyvid.mp4
+video1: /assets/pics/uploads/dummyvid.mp4
+subtitle: קורסים חינוכיים שאנחנו מעבירים
 ---
 ## יש קורס כזה וכזה
 ששם אנחנו עושים ככה וככה
