Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -1,6 +1,6 @@
 ---
-title: לעבוד בגן ילדי הטבע
-subtitle: ממש כיף לעבוד פה!
+title: "הצטרפו לצוות המנצח שלנו "
+subtitle: ""
 tadmitVideo: /assets/pics/uploads/dummyvid.mp4
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
