--- a/content/team/ישראל-ישראלי.md
+++ b/content/team/ישראל-ישראלי.md
@@ -2,7 +2,7 @@
 title: "רוני "
 firstname: "רוני "
 lastname: "שפר "
-img: /img/pics/‏‏לכידה.png
+img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-32.jpg
 index: 14
 ---
 
