Update הצוות “זיו-רייכרט”

--- a/content/team/זיו-רייכרט.md
+++ b/content/team/זיו-רייכרט.md
@@ -2,7 +2,7 @@
 title: גבי דיוויס
 firstname: "גבי "
 lastname: דיוויס
-img: /img/pics/whatsapp-image-2020-08-27-at-19.22.59-1-.jpeg
+img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_87.jpg
 index: 12
 ---
 
