Update הצוות “מיטל”

--- a/content/team/מיטל.md
+++ b/content/team/מיטל.md
@@ -5,10 +5,16 @@ lastname: בן ארי
 img: /assets/pics/uploads/whatsapp-image-2021-08-08-at-11.22.20.jpeg
 index: 10
 ---
-בר בגריש, בת 27- מחנכת 
+<!--StartFragment-->
 
-בעלת תעודת הוראה ותואר ראשון בחינוך לגיל הרך- שנה ראשונה בגן 
+מיטל בן ארי, בת 40- מנהלת אדמיניסטרטיבית
+
+בעלת תואר ראשון בחינוך ואמנות, תואר שני בניהול מדיניות ציבורית וסטודנטית לתעודת הוראה בפסיכולוגיה
+
+שנה ראשונה בגן 
 
  
 
-ילדים הם מקור שמחה ואור בחיי. אין דבר יותר כיף עבורי מלקום בבוקר לחיוכים ולחיבוקים שלהם. בזכות הילדים אני יכולה למצוא ולהתחבר לילדה שבי בכל יום, יכולה להשתטות בלי לחשוב מה חושבים ולחקור יחד איתם את העולם מחדש. לאורך כל חיי עבדתי עם ילדים ועסקתי בחינוך. תמיד ידעתי שזה הייעוד שלי והמקום בו ארצה ליצור שינוי ולהתוות דרך לדורות הבאים. אני מרגישה שפה בגן אוכל להשפיע וליצור את אותו שינוי יחד עם צוות הגן שמהרגע הראשון הרגיש כמו משפחה מחבקת ומקבלת עבורי.
+בתחילת דרכי המקצועית עסקתי בהדרכה של ילדים ונוער בסיכון ובהמשך עברתי לעסוק בניהול פרויקטים חינוכיים, תפעול ומשאבי אנוש בארגונים חינוכיים. תחום החינוך והפסיכולוגיה ריתקו אותי מאז ומעולם ומהרגע שהפכתי לאמא הבנתי שזה אכן המקום ותחום הדעת הנכון עבורי לשהות, להעמיק ולעסוק בו. אני מאמינה ששנות הגיל הרך קריטיות ומשמעותיות לאין שיעור עבור נפש הילדים וצמיחתם ומאושרת שיש לי חלק בהפיכת המציאות שלהם למיטבית, מכילה ומעצימה. בשורה התחתונה אני פותחת בכל בוקר את יום העבודה שלי בגן כשעשרות פרצופים של ילדים שמחים מחייכים אלי- עבורי זה פשוט אושר גדול.
+
+<!--EndFragment-->
