Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -1,6 +1,15 @@
 ---
 title: "הצטרפו לצוות המנצח שלנו "
-subtitle: ""
+subtitle: "צוות המחנכות והמחנכים שלנו מורכב מחבורת א.נשים מדהימים ומיוחדים
+  שנושמים חינוך ורוצים לגדול ולהתפתח אישית ומקצועית. חשוב לנו מאוד שהמחנכות בגן
+  שלנו יהיו מרוצות וידעו שיש מי שדואגים להן תמיד, לכן אנחנו משקיעים משאבים רבים
+  כדי לתת לכן את היחס והתנאים הטובים ביותר שאנחנו יכולים לאפשר כמקום עבודה: שכר
+  הולם, תנאים סוציאליים מלאים, מתנות שוות ביומולדת, שלושה ימי כיף וגיבוש לאורך
+  השנה ועוד ועוד. כארגון חינוכי, אנחנו נמצאים תמיד בתהליך של צמיחה, למידה
+  והתפתחות. אנחנו מקיימים לאורך השנה שני סמינרים והעשרות מקצועיות קבועות אחת
+  לחודש כדי שנוכל כצוות לעבד את החוויה החינוכית, לגבש את הזהות האישית ולפתח את
+  היכולת המקצועית שלנו באמצעות רכישת ידע, מיומנויות וכלים. ובלי קשר, פאן לנו
+  במאקסימום כאן. "
 tadmitVideo: /assets/pics/uploads/dummyvid.mp4
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
