Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -10,7 +10,7 @@ subtitle: "צוות המחנכות והמחנכים שלנו מורכב מחבו
   לחודש כדי שנוכל כצוות לעבד את החוויה החינוכית, לגבש את הזהות האישית ולפתח את
   היכולת המקצועית שלנו באמצעות רכישת ידע, מיומנויות וכלים. ובלי קשר, פאן לנו
   במאקסימום כאן. "
-tadmitVideo: /assets/pics/uploads/dummyvid.mp4
+tadmitVideo: https://www.youtube.com/watch?v=SVe2cxA6PqU
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
 ---
