Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -13,4 +13,11 @@ subtitle: "צוות המחנכות והמחנכים שלנו מורכב מחבו
 tadmitVideo: https://www.youtube.com/watch?v=SVe2cxA6PqU
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
+teamList:
+  - title: נירו
+    firstname: ניר
+    lastname: פריזיאן
+    body: להלהלהלה
+    index: 0
+    img: /assets/pics/uploads/color.jpg
 ---
