use teamList instead of teamData

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -15,9 +15,17 @@ tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
 teamList:
   - title: נירו
+    firstName: ניר
+    lastName: פריזיאן
+    role: מנהל הגן
+    description: djkfsjfhhdkjlshjdhfclj djksd fkjdfkjdhjdhskjld j dkjdk lk jddhd hgsdkh kjlgjlkldhsgkjsdgjdsljlfdhlfjkjlgkjd jklfh jhjkdhfdjk hdjhg ldg hld hlsdh d h;ldshgldjhglkjdhgjshlgljkljdgjhldjhsl hd lm cmdnkkd kns nkdksd kjn jlhd dhlfdhf ld lfd fd dshlfsd lfdhfjlsd dhfd hfldshf hdsfjaljshlafl ahjfh
+    index: 0
+    img: /assets/pics/uploads/color.jpg
+  - title: נירו
     firstname: ניר
+    role: מנהלת הגן
     lastname: פריזיאן
-    body: להלהלהלה
+    description: djkfsjfhhdkjlshjdhfclj djksd fkjdfkjdhjdhskjld j dkjdk lk jddhd hgsdkh kjlgjlkldhsgkjsdgjdsljlfdhlfjkjlgkjd jklfh jhjkdhfdjk hdjhg ldg hld hlsdh d h;ldshgldjhglkjdhgjshlgljkljdgjhldjhsl hd lm cmdnkkd kns nkdksd kjn jlhd dhlfdhf ld lfd fd dshlfsd lfdhfjlsd dhfd hfldshf hdsfjaljshlafl ahjfh
     index: 0
     img: /assets/pics/uploads/color.jpg
 ---
