Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -14,18 +14,34 @@ tadmitVideo: https://www.youtube.com/watch?v=SVe2cxA6PqU
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
 teamList:
-  - title: נירו
-    firstName: ניר
-    lastName: פריזיאן
-    role: מנהל הגן
-    description: djkfsjfhhdkjlshjdhfclj djksd fkjdfkjdhjdhskjld j dkjdk lk jddhd hgsdkh kjlgjlkldhsgkjsdgjdsljlfdhlfjkjlgkjd jklfh jhjkdhfdjk hdjhg ldg hld hlsdh d h;ldshgldjhglkjdhgjshlgljkljdgjhldjhsl hd lm cmdnkkd kns nkdksd kjn jlhd dhlfdhf ld lfd fd dshlfsd lfdhfjlsd dhfd hfldshf hdsfjaljshlafl ahjfh
+  - title: " "
+    firstName: אורטל
+    lastName: " "
+    role: " "
+    description: >
+      ילדי הטבע הוא הרבה יותר מגן, הוא בית, הוא מקום לצמוח ולגדול.
+
+      התחלתי את דרכי עם הגן לפני 8 שנים, כשהוא עוד היה גן קטן וצעיר ואני פשוט גננת.
+
+      עם השנים הגיעה צמיחה, גדילה והבנה משותפת שחינוך לגיל הרך הוא חשוב, חיוני וכל כך מספק. 
+
+      היום זה כבר לא רק גן אלה גם מרכז מקצועי לחינוך לגיל הרך וזה בזכות היכולת של המקום להגמיש, לחנך, ללמד ולשים לב לכל אחד ואחת שבוחרים ובוחרות להכניס למערכת הזו גם בפן האישי וגם בפן המקצועי.
     index: 0
-    img: /assets/pics/uploads/color.jpg
-  - title: נירו
+    img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-19-1-.jpg
+  - lastname: פריזיאן
+    lastName: " "
+    img: /assets/pics/uploads/5.jpg
+    index: 0
+    role: " "
+    title: " "
     firstname: ניר
-    role: מנהלת הגן
-    lastname: פריזיאן
-    description: djkfsjfhhdkjlshjdhfclj djksd fkjdfkjdhjdhskjld j dkjdk lk jddhd hgsdkh kjlgjlkldhsgkjsdgjdsljlfdhlfjkjlgkjd jklfh jhjkdhfdjk hdjhg ldg hld hlsdh d h;ldshgldjhglkjdhgjshlgljkljdgjhldjhsl hd lm cmdnkkd kns nkdksd kjn jlhd dhlfdhf ld lfd fd dshlfsd lfdhfjlsd dhfd hfldshf hdsfjaljshlafl ahjfh
-    index: 0
-    img: /assets/pics/uploads/color.jpg
+    firstName: הילה
+    description: >
+      לגן ילדי הטבע הגעתי באמצע השנה שעברה ומהשניה הראשונה הרגשתי חיבוק אדיר.
+
+      המקום הזה הוא פשוט מקום עבודה קסום שמתנהל בצורה כל כך מקצועית ונותן תמיכה אישית- רגשית ומקצועית יחד! אני מרגישה ברת מזל להיות חלק מהארגון הזה, ללמוד ולהתפתח. 
+
+      המקום הזה מאפשר לי לשלב תחומים נוספים שאני מפתחת, תחושת סיפוק ומשמעות אדירה, אפשרויות למידה וצמיחה ולהביא את עצמי לידי ביטוי. הצוות מורכב מדמויות מעוררות השראה, עמיתות מופלאות וחברות מדהימות. הצוות הניהול הם אנשים מדהימים שנותנים תחושה נעימה, שרואים אותנו ודואגים לנו לא רק בהיבט המקצועי. הגן הזה הוא באמת ה- Next Level של החינוך עד לפרטים הכי קטנים בהתנהלות שלו.
+
+      אין לי ספק שכל מי שי/תגיע לעבוד כאן י/תזכה!
 ---
