Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -31,7 +31,7 @@ teamList:
   - lastname: פריזיאן
     lastName: " "
     img: /assets/pics/uploads/5.jpg
-    index: 0
+    index: 3
     role: " "
     title: " "
     firstname: ניר
@@ -44,4 +44,87 @@ teamList:
       המקום הזה מאפשר לי לשלב תחומים נוספים שאני מפתחת, תחושת סיפוק ומשמעות אדירה, אפשרויות למידה וצמיחה ולהביא את עצמי לידי ביטוי. הצוות מורכב מדמויות מעוררות השראה, עמיתות מופלאות וחברות מדהימות. הצוות הניהול הם אנשים מדהימים שנותנים תחושה נעימה, שרואים אותנו ודואגים לנו לא רק בהיבט המקצועי. הגן הזה הוא באמת ה- Next Level של החינוך עד לפרטים הכי קטנים בהתנהלות שלו.
 
       אין לי ספק שכל מי שי/תגיע לעבוד כאן י/תזכה!
+  - title: " "
+    firstName: חוה
+    lastName: " "
+    img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_99-1-.jpg
+    index: 2
+    role: " "
+    description: >
+      מבחינתי לעבוד בגן ילדי הטבע זה להיות במקום שלך אכפת ממנו ולו אכפת ממך. 
+
+      הגעתי לגן אחרי עבודה בגנים אחרים וגיליתי עולם שלם שמראה שאפשר לעשות דברים אחרת. גיליתי 
+
+      שיש מקום שאכפת לכולם באמת מהילדים ומהצוות. מקום שאת יכולה להרגיש שלהנהלה אכפת ממך ולא רק מעצמה. כאן זה שונה, הם תמיד בשבילך... תמיד שם. גם כשאת לא אומרת או מראה הם רואים אותך ושמים לב לדברים הקטנים. להכנס לפה זה לזכות במשפחה שניה. לדעת שאת מגיעה לכאן, לא משנה מי ומה את, הם מקבלים אותך, עוזרים לך למצוא את המקום שלך, לצמוח ולהתפתח. 
+
+
+      כשהגעתי קצת חששתי. אמרתי לעצמי "בסדר עוד גן עם המון צוות ומה כבר יכול להיות?" ברגע האמת? זה לגמרי היה אחרת. קיבלנו אותי עם חיוך וגרמו לי להרגיש הכי טוב שיש והכי שייכת. ילדי הטבע הדמוקרטי הוא מקום שאני מרגישה שתמיד אפשר ללמוד, לעלות ולהתקדם בו. היום אני יכולה להגיד בלב שלם שאני יודעת שאני במקום הנכון בשבילי ואני מגיעה בכל בוקר עם חיוך לעבודה.
+  - title: " "
+    firstName: חן
+    lastName: " "
+    img: /assets/pics/uploads/חן.jpeg
+    index: 3
+    role: " "
+    description: >
+      אני חושבת שהמילה שמסכמת יותר מכל את התחושה שיש לי מהעבודה בגן היא -
+      סיפוק. 
+
+      זה נכון שאני עושה את מה שאני אוהבת, אבל אהבה למקצוע לבדה לא מספיקה לתחושת סיפוק (בטוח שלא לאורך זמן). אני חושבת שבגן יש לי את התחושה הזו באופן כל כך ברור כי יש בו צוות ניהולי שרואה, מעריך ויודע להביע את הערכה ולתגמל על העבודה שלי. יש מי שמכוון אותי כך שיש לי אפשרות לצמוח ולהשתפר בכל פעם מחדש. אחרי 3 ומשהו שנים באותו מקצוע ובאותו "תפקיד זוטר" אני עדיין מתפלאת איך הצמיחה שלי בגן היא לא רק כעובדת אלא גם כבת אדם. הצמיחה היא ממש לרוחב, דרך כל מיני תחומים שעל פני השטח לא נראים קשורים אבל באמת של הדברים הם יוצרים שלם הרבה יותר עשיר, מעניין ומקצועי.
+
+      חוצמזה, זו סביבת עבודה הכי כפיית שאפשר לבקש- יש צוות מהמם, מבנה מטופח ונעים ומלא ילדים רוקדים וצוחקים סביבי. בסה"כ זכיתי בלוטו של העבודות 
+  - title: " "
+    firstName: נופר
+    lastName: " "
+    index: 4
+    description: >
+      זהו גן ייחודי בעיני. זה מתחיל עוד בתהליך הגיוס השונה שגורם לך להתבונן
+      בעצמך ובגישה החינוכית שלך ושל הגן ולהבין את הסדר, השפה ושיטת העבודה כאן.
+      למעשה זהו ארגון לכול דבר, כמו מיני בי"ס רק לגיל הרך. מתוך ההשתלמויות
+      ותהליך הקבלה והקליטה לכאן, אם היו שואלים אותי, אז אני חושבת שהדרך של גן
+      ילדי הטבע הדמוקרטי צריכה להילמד בכל הגנים בארץ ואף אפריז ואגיד שבחלומי היא
+      מתרחבת גם לגילאים גדולים יותר. הבדיקה של מידת ההתאמה של המחנכת לארגון
+      והכבוד שניתן לצרכים שלה, לצד הסטנדרט הגבוהה, נותן מענה שלדעתי מערכת החינוך
+      כיום אינה מעניקה ברובה. 
+       
+      אני נהנת מעבודת צוות אמיתית, עם דיבור בזמן אמת של ההנהלה שהיא חלק אינטגרלי מעשיית הצוות ממקום קשוב, מעצים ומכיל וממקום אמיתי של למידה והתפתחות. הערכים עליהם מתקיים הגן עבור הילדימות אלה אותם ערכים שמיושמים הלכה למעשה גם עבור כל מחנכת, או כול עובד/ת בגן. העבודה זורמת והרמונית ויש ניסיון אמיתי לתת לכלל הצוות תחושת שייכות וגרום לנו להרגיש חלק מקבוצת איכות של מחנכות. זו מסגרת מובנית עם שיטה ודרך, אבל כזו שנותנת גם מקום ליצירתיות והתבוננות על מה אנחנו צריכים לעשות כדי להמשיך ולהשתפר תמיד. 
+       
+      יש הרגשה שאת לא לבד, שיש לך ביטחון תעסוקתי והתפתחותי, שאת חלק ממערכת שרואה אותך ושהעשייה שלך חשובה לה. זאת עבודה לא קלה, אבל עם תחושת שליחות וסיפוק ממלאכת חינוך איכותית שמסייעת לפריחת וצמיחת הילדימות. זה מקום שמרגיש כבוד להיות חלק ממנו. 
+    role: " "
+    img: /assets/pics/uploads/black-and-white.jpg
+  - title: " "
+    firstName: שגיא
+    lastName: " "
+    index: 5
+    role: " "
+    description: >
+      המפגש הראשוני שלי עם תפיסת החינוך של הגן הייתה בהרצאה של אחינועם דרך
+      הלימודים בסמינר הקיבוצים. אני זוכרת שממש הוקסמתי לשמוע על השפה שהגן יצר
+      לעצמו, על עולם התוכן החינוכי שבנה, ועל היכולת ללמד את הילדימות לבחור מה
+      נכון וטוב להם. כבר באותו היום פשוט ידעתי שזה המקום שאליו אני יכולה להגיע
+      כדי להתפתח בתחום החינוך וגם ברמה האישית. 
+
+
+      עכשיו בתור מחנכת בגן, אני יכולה לספר שאני מקבלת פה המון הדרכות מקצועיות שמאפשרות לי לדייק את עצמי בעבודה מול הילדימות מיום ליום. בנוסף, מעבר להדרכות, אנחנו גם מקיימות שיח פתוח על מה עשינו טוב, מה עבד, ומה דורש שיפור. ההתבוננות והיכולת להבין איך אני מנהלת את הסיטואציה טוב יותר, מאפשרת לנו לצמוח ולגדול יחד עם הילדימות.
+    img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68-1-.jpg
+  - title: " "
+    firstName: שיר
+    lastName: "  "
+    img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-2-2-.jpg
+    index: 6
+    role: " "
+    description: >
+      כשנכנסתי לעבוד בגן ילדי הטבע לא הבנתי באמת למה אני נכנסת. הצוות הניהולי
+      גרם לי להבין מהר מאוד איך מתנהלים בגן הזה, מה הערכים שמובילים את המחנכות
+      וכמה הילדימות המתוקים חשובים לנו.
+
+      להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות.והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
+  - title: "  "
+    firstName: תמר
+    lastName: "  "
+    img: /assets/pics/uploads/tamar.jpg
+    index: 6
+    role: " "
+    description: "אני עובדת בגן כבר כמעט שמונה שנים. להיות בגן זה להרגיש חלק מקהילה.
+      הצוות החינוכי מורכב מנשות חינוך שמאמינות בכוח שיש לילדימות לשנות את העולם
+      ועושות הכל כדי לסייע להם לגלות את הפוטנציאל הגלום בהם. "
 ---
