Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -14,7 +14,7 @@ tadmitVideo: https://www.youtube.com/watch?v=SVe2cxA6PqU
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
 teamList:
-  - title: " "
+  - title: " אורטל"
     firstName: אורטל
     lastName: " "
     role: " "
@@ -31,9 +31,9 @@ teamList:
   - lastname: פריזיאן
     lastName: " "
     img: /assets/pics/uploads/5.jpg
-    index: 3
+    index: 1
     role: " "
-    title: " "
+    title: הילה
     firstname: ניר
     firstName: הילה
     description: >
@@ -44,7 +44,7 @@ teamList:
       המקום הזה מאפשר לי לשלב תחומים נוספים שאני מפתחת, תחושת סיפוק ומשמעות אדירה, אפשרויות למידה וצמיחה ולהביא את עצמי לידי ביטוי. הצוות מורכב מדמויות מעוררות השראה, עמיתות מופלאות וחברות מדהימות. הצוות הניהול הם אנשים מדהימים שנותנים תחושה נעימה, שרואים אותנו ודואגים לנו לא רק בהיבט המקצועי. הגן הזה הוא באמת ה- Next Level של החינוך עד לפרטים הכי קטנים בהתנהלות שלו.
 
       אין לי ספק שכל מי שי/תגיע לעבוד כאן י/תזכה!
-  - title: " "
+  - title: " חוה"
     firstName: חוה
     lastName: " "
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_99-1-.jpg
@@ -59,7 +59,7 @@ teamList:
 
 
       כשהגעתי קצת חששתי. אמרתי לעצמי "בסדר עוד גן עם המון צוות ומה כבר יכול להיות?" ברגע האמת? זה לגמרי היה אחרת. קיבלנו אותי עם חיוך וגרמו לי להרגיש הכי טוב שיש והכי שייכת. ילדי הטבע הדמוקרטי הוא מקום שאני מרגישה שתמיד אפשר ללמוד, לעלות ולהתקדם בו. היום אני יכולה להגיד בלב שלם שאני יודעת שאני במקום הנכון בשבילי ואני מגיעה בכל בוקר עם חיוך לעבודה.
-  - title: " "
+  - title: " חן"
     firstName: חן
     lastName: " "
     img: /assets/pics/uploads/חן.jpeg
@@ -72,7 +72,7 @@ teamList:
       זה נכון שאני עושה את מה שאני אוהבת, אבל אהבה למקצוע לבדה לא מספיקה לתחושת סיפוק (בטוח שלא לאורך זמן). אני חושבת שבגן יש לי את התחושה הזו באופן כל כך ברור כי יש בו צוות ניהולי שרואה, מעריך ויודע להביע את הערכה ולתגמל על העבודה שלי. יש מי שמכוון אותי כך שיש לי אפשרות לצמוח ולהשתפר בכל פעם מחדש. אחרי 3 ומשהו שנים באותו מקצוע ובאותו "תפקיד זוטר" אני עדיין מתפלאת איך הצמיחה שלי בגן היא לא רק כעובדת אלא גם כבת אדם. הצמיחה היא ממש לרוחב, דרך כל מיני תחומים שעל פני השטח לא נראים קשורים אבל באמת של הדברים הם יוצרים שלם הרבה יותר עשיר, מעניין ומקצועי.
 
       חוצמזה, זו סביבת עבודה הכי כפיית שאפשר לבקש- יש צוות מהמם, מבנה מטופח ונעים ומלא ילדים רוקדים וצוחקים סביבי. בסה"כ זכיתי בלוטו של העבודות 
-  - title: " "
+  - title: " נופר"
     firstName: נופר
     lastName: " "
     index: 4
@@ -90,8 +90,8 @@ teamList:
        
       יש הרגשה שאת לא לבד, שיש לך ביטחון תעסוקתי והתפתחותי, שאת חלק ממערכת שרואה אותך ושהעשייה שלך חשובה לה. זאת עבודה לא קלה, אבל עם תחושת שליחות וסיפוק ממלאכת חינוך איכותית שמסייעת לפריחת וצמיחת הילדימות. זה מקום שמרגיש כבוד להיות חלק ממנו. 
     role: " "
-    img: /assets/pics/uploads/black-and-white.jpg
-  - title: " "
+    img: /assets/pics/uploads/נופר.jpg
+  - title: " שגיא"
     firstName: שגיא
     lastName: " "
     index: 5
@@ -106,7 +106,7 @@ teamList:
 
       עכשיו בתור מחנכת בגן, אני יכולה לספר שאני מקבלת פה המון הדרכות מקצועיות שמאפשרות לי לדייק את עצמי בעבודה מול הילדימות מיום ליום. בנוסף, מעבר להדרכות, אנחנו גם מקיימות שיח פתוח על מה עשינו טוב, מה עבד, ומה דורש שיפור. ההתבוננות והיכולת להבין איך אני מנהלת את הסיטואציה טוב יותר, מאפשרת לנו לצמוח ולגדול יחד עם הילדימות.
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68-1-.jpg
-  - title: " "
+  - title: שיר
     firstName: שיר
     lastName: "  "
     img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-2-2-.jpg
@@ -118,7 +118,7 @@ teamList:
       וכמה הילדימות המתוקים חשובים לנו.
 
       להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות.והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
-  - title: "  "
+  - title: תמר
     firstName: תמר
     lastName: "  "
     img: /assets/pics/uploads/tamar.jpg
