Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -30,7 +30,7 @@ teamList:
     img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-19-1-.jpg
   - lastname: פריזיאן
     lastName: " "
-    img: /assets/pics/uploads/5.jpg
+    img: /assets/pics/uploads/הילה-4.png
     index: 1
     role: " "
     title: הילה
@@ -62,7 +62,7 @@ teamList:
   - title: " חן"
     firstName: חן
     lastName: " "
-    img: /assets/pics/uploads/חן.jpeg
+    img: /assets/pics/uploads/חן-3.png
     index: 3
     role: " "
     description: >
@@ -90,7 +90,7 @@ teamList:
        
       יש הרגשה שאת לא לבד, שיש לך ביטחון תעסוקתי והתפתחותי, שאת חלק ממערכת שרואה אותך ושהעשייה שלך חשובה לה. זאת עבודה לא קלה, אבל עם תחושת שליחות וסיפוק ממלאכת חינוך איכותית שמסייעת לפריחת וצמיחת הילדימות. זה מקום שמרגיש כבוד להיות חלק ממנו. 
     role: " "
-    img: /assets/pics/uploads/נופר.jpg
+    img: /assets/pics/uploads/נופר-3.png
   - title: " שגיא"
     firstName: שגיא
     lastName: " "
