Update עדכון שבועי “על-בצק-ובתוך-הסוכה”

--- a/content/weekly-update/על-בצק-ובתוך-הסוכה.md
+++ b/content/weekly-update/על-בצק-ובתוך-הסוכה.md
@@ -2,6 +2,8 @@
 title: על בצק ובתוך הסוכה
 date: 2021-10-01T07:57:04.502Z
 ---
+![]()
+
 שבת שלום,
 
 השבוע הסתיימו להם חגי תשרי, ואנחנו בגן סוף סוף מתחילות תקופה של עבודה רציפה ללא הפרעות - נראה שכולנו כבר לגמרי מוכנים ומצפים לכך. כמה הודעות לפני שנעבור לעדכון: 
@@ -90,7 +92,7 @@ date: 2021-10-01T07:57:04.502Z
 
 בתחילת השבוע חיפשנו אילו מקומות בחצר יכולים להפוך לסוכה של הגן. מצאנו את הקיוסק הממוקם ממש צמוד לחצר של הצעירים, וגם את בית העץ האהוב עלינו ממש ליד ארגז החול. אבל לא הצלחנו לשבת יחד כקבוצה, היה לנו ממש צפוף וחיפשנו מקום אחר שיהיה לנו נעים בו.
 
-חשבנו שאולי האיגלו יכול להפוך לסוכה, כל מה שצריך זה רק שמיכה ענקית שתעטוף אותו כך שיהיה לנו סכך. הבאנו מחדר האומנות שמיכה ענקית, וכיסינו את האיגלו. והאמת ששוב לא היה מקום לכולנו. לא התייאשנו, המשכנו לחפש, עד שמצאנו מקום שעונה על כל הצרכים שלנו: ארבע קירות, פתח להיכנס דרכו, ומקום נוח לישיבה של כל הילדימות - הבית של שושנה. מתחנו מעליו את השמיכה, והופ הסוכה מוכנה!  ישבנו בתוכה, ואכלנו פרי להתרענן מהעבודה הקשה בבניית הסוכה השכבתית שלנו.
+חשבנו שאולי האיגלו יכול להפוך לסוכה, כל מה שצריך זה רק שמיכה ענקית שתעטוף אותו כך שיהיה לנו סכך. הבאנו מחדר האומנות שמיכה ענקית, וכיסינו את האיגלו. והאמת ששוב לא היה מקום לכולנו. לא התייאשנו, המשכנו לחפש, עד שמצאנו מקום שעונה על כל הצרכים שלנו: ארבע קירות, פתח להיכנס דרכו, ומקום נוח לישיבה של כל הילדימות - הבית של שושנה. צבענו לנו עלים יפים לקישוט, מתחנו מעליו את השמיכה, והופ הסוכה מוכנה!  ישבנו בתוכה, ואכלנו פרי להתרענן מהעבודה הקשה בבניית הסוכה השכבתית שלנו.
 
 כאשר היינו בסוכה, תהינו מה יקרה לנו אם למשל ירד גשם, או שתגיע רוח ממש ממש ממש חזקה, או שמש ישירה. גילינו שהכל תלוי מהחומר ממנה בנויה הסוכה, למשל - אם הסוכה מעץ אנחנו נישאר יבשים למרות הגשם שבחוץ, אבל אם הסוכה מבד אז אנחנו עלולים להירטב מעט כי החומר לא אטום. 
 
