--- a/content/weekly-update/על-בצק-ובתוך-הסוכה.md
+++ b/content/weekly-update/על-בצק-ובתוך-הסוכה.md
@@ -1,6 +1,7 @@
 ---
 title: על בצק ובתוך הסוכה
 date: 2021-10-01T07:57:04.502Z
+img: ""
 ---
 ![]()
 
@@ -74,7 +75,9 @@ date: 2021-10-01T07:57:04.502Z
 
 להעשרה וגיוון אפשר לצבוע את הבצק בעזרת מי סלק שבושלו או בתבלינים כמו פפריקה/כורכום.
 
-בשבוע הבא נפגוש כרגיל שוב את הבצק המרגיע שלנו, וגם נמשיך לדבר על הבתים הארעיים שלנו.
+בשבוע הבא נפגוש כרגיל שוב את הבצק המרגיע שלנו, את ארגז החול וגם נמשיך לדבר על הבתים הארעיים שלנו.
+
+![](/assets/pics/uploads/20210923_111609.jpg)
 
 **שבת מנוחה,**
 
@@ -93,6 +96,8 @@ date: 2021-10-01T07:57:04.502Z
 בתחילת השבוע חיפשנו אילו מקומות בחצר יכולים להפוך לסוכה של הגן. מצאנו את הקיוסק הממוקם ממש צמוד לחצר של הצעירים, וגם את בית העץ האהוב עלינו ממש ליד ארגז החול. אבל לא הצלחנו לשבת יחד כקבוצה, היה לנו ממש צפוף וחיפשנו מקום אחר שיהיה לנו נעים בו.
 
 חשבנו שאולי האיגלו יכול להפוך לסוכה, כל מה שצריך זה רק שמיכה ענקית שתעטוף אותו כך שיהיה לנו סכך. הבאנו מחדר האומנות שמיכה ענקית, וכיסינו את האיגלו. והאמת ששוב לא היה מקום לכולנו. לא התייאשנו, המשכנו לחפש, עד שמצאנו מקום שעונה על כל הצרכים שלנו: ארבע קירות, פתח להיכנס דרכו, ומקום נוח לישיבה של כל הילדימות - הבית של שושנה. צבענו לנו עלים יפים לקישוט, מתחנו מעליו את השמיכה, והופ הסוכה מוכנה!  ישבנו בתוכה, ואכלנו פרי להתרענן מהעבודה הקשה בבניית הסוכה השכבתית שלנו.
+
+![](/assets/pics/uploads/img_8322.jpg)
 
 כאשר היינו בסוכה, תהינו מה יקרה לנו אם למשל ירד גשם, או שתגיע רוח ממש ממש ממש חזקה, או שמש ישירה. גילינו שהכל תלוי מהחומר ממנה בנויה הסוכה, למשל - אם הסוכה מעץ אנחנו נישאר יבשים למרות הגשם שבחוץ, אבל אם הסוכה מבד אז אנחנו עלולים להירטב מעט כי החומר לא אטום. 
 
