Update עדכון שבועי “נכנסים-לעניינים”

--- a/content/weekly-update/נכנסים-לעניינים.md
+++ b/content/weekly-update/נכנסים-לעניינים.md
@@ -44,8 +44,6 @@ date: 2021-10-08T12:42:43.867Z
 
 **אחינועם וכל צוות ילדי הטבע הדמוקרטי** 
 
-
-
 ## שכבת הצעירים
 
 שבוע נפלא ושלם עבר עלינו בגן, אנחנו ממש נפעמות מהילדימות ומהמהירות שבה הם לומדים ומפנימים דברים בגן. לפני שניכנס לעניינים, כמה הודעות:
@@ -64,9 +62,9 @@ date: 2021-10-08T12:42:43.867Z
 
 מי זו טיטי, אתם אולי תוהים? טיטי הבובה היא דמות חשובה בגננו. מדי בוקר אנחנו קוראים לה לעזור לנו לפתוח במפגש - היא [רוקדת ולומדת איתנו](https://www.youtube.com/watch?v=x5fUFRfpDTs), ולפעמים אפילו מביאה איתה הפתעות! הילדימות כבר לא מוכנים לוותר עליה, ומזכירים למחנכת מדי בוקר לקרוא לה לרדת מן המדף ולהצטרף אלינו למפגש! 
 
-אילו עוד שירים מלווים את היום שלנו? יש לנו שני שירים שקוראים לילדים להתיישב איתנו ועוזרים לנו לאסוף אותם בכיף: [הופ הופ הופ (בערך ב-0:40)](<https://www.youtube.com/watch?v=bZQrxi5kso8>), [](https://www.youtube.com/watch?v=bZQrxi5kso8) ו[נתופף על הגוף](https://www.youtube.com/watch?v=hocEh0TY2vw). הילדימות ממש אוהבים אותם וכבר יודעים את כל התנועות! נסו גם בבית! 
+אילו עוד שירים מלווים את היום שלנו? יש לנו שני שירים שקוראים לילדים להתיישב איתנו ועוזרים לנו לאסוף אותם בכיף: [הופ הופ הופ (בערך ב-0:40)](https://www.youtube.com/watch?v=bZQrxi5kso8), [](https://www.youtube.com/watch?v=bZQrxi5kso8) ו[נתופף על הגוף](https://www.youtube.com/watch?v=hocEh0TY2vw). הילדימות ממש אוהבים אותם וכבר יודעים את כל התנועות! נסו גם בבית! 
 
-### מוצצים בגן
+# מוצצים בגן
 
 הרבה מכם שואלים אותנו על מדיניות המוצצים בגן, אז הנה בקצרה הגישה שלנו לגבי מוצצים :)
 
@@ -85,8 +83,6 @@ date: 2021-10-08T12:42:43.867Z
 בשבוע הבא נמשיך להטמיע הרגלים, ונתחיל קצת לדבר על הסתיו. מחכות לראותכם ביום ראשון!
 
 **צוות שכבת הצעירים: חוה, חולוד, רותם, בר, עדי, שיר ומיכל**
-
-
 
 ## שכבת הבוגרים
 
