Update עדכון שבועי “ברוח-הסתיו-עלים-נופלים”

--- a/content/weekly-update/ברוח-הסתיו-עלים-נופלים.md
+++ b/content/weekly-update/ברוח-הסתיו-עלים-נופלים.md
@@ -54,15 +54,15 @@ date: 2021-10-21T19:05:22.865Z
 
 **אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
 
- 
-
 ## שכבת הצעירים
 
 עבר עלינו עוד שבוע סתוי ונהדר! אנחנו והילדימות כבר מתחילים להתרגל לסדר היום שלנו. אז איך בעצם נראה היום שלנו? מה אנחנו עושים כשאנחנו מגיעים לגן? דבר ראשון, מניחים את התיק בסלסלה שלו, ואת הבקבוק שלנו בסלסלת המים! אנחנו רואות שחלק מהילדימות כבר עושים את זה בעצמם, וזה מאוד מרגש אותנו. אחרים צריכים עוד קצת ליווי והכוונה, אבל כבר מאוד בעניין ומתמלאים גאווה כשהם מצליחים.
 
 מהסלסלה, החברימות כבר בוחרים איפה בחצר הם רוצים להתמקם למשחק חופשי - החצר בבוקר פתוחה לרוב עם כמה פינות - פינת צביעה/הדבקה, ג'ימבורי, קוביות גדולות וארגז חול, וכמובן יתר משחקי החצר. ארגז החול פופולרי במיוחד בשעות הבוקר, והרבה ילדימות ישר רצים אליו. השבוע העברנו הרבה חול מכלי לכלי. לקחנו כלי גדול מלא בחול, הרבה כלים קטנים וכלי גדול נוסף אבל ריק, וניסינו להשתמש בכלים הקטנים כדי להעביר את כל החול מהכלי הראשון לשני. הילדימות התרכזו בכך זמן ממושך, וגם ניסו להעביר חול בין הכלים הקטנים. ומה קורה כשאני מנסה לשפוך חול מסיר גדול לבקבוקון קטן? הכל נשפך!
 
- פעילות נוספת החביבה על הילדימות בארגז החול היא סינון חול. אנחנו מכניסים למסננת דקה הר קטן של חול, מנענעים ומנענעים, ורואים מה שנשאר. לפעמים אנחנו מוצאים אוצרות, אבל לרוב, רק לכלוכים קטנים. מדבקה של קופת חולים, קצת עלים, אבנים קטנות או חול שהתקשה. החול המסונן לתוך סיר, רך ונקי ונעים! ומה נעשה עם הלכלוכים? כמובן נזרוק לפח! כך אנחנו גם לומדים לשמור על החצר שלנו נקייה על הדרך.
+![](/assets/pics/uploads/משחק-חופשי-בחצר-צעירים.jpeg "משחק חופשי בחצר")
+
+פעילות נוספת החביבה על הילדימות בארגז החול היא סינון חול. אנחנו מכניסים למסננת דקה הר קטן של חול, מנענעים ומנענעים, ורואים מה שנשאר. לפעמים אנחנו מוצאים אוצרות, אבל לרוב, רק לכלוכים קטנים. מדבקה של קופת חולים, קצת עלים, אבנים קטנות או חול שהתקשה. החול המסונן לתוך סיר, רך ונקי ונעים! ומה נעשה עם הלכלוכים? כמובן נזרוק לפח! כך אנחנו גם לומדים לשמור על החצר שלנו נקייה על הדרך.
 
  בהדרגה, אנחנו נכנסים לכיתות, משחקים קצת בפנים ואוכלים ארוחת בוקר.  משם, כל קבוצה יוצאת לסדר היום שלה - הסגולים יוצאים שוב לחצר למשחק מובנה ורגוע יותר; הורודים נשארים למפגש והגשת חומרים. לאחר מכן - מתחלפים! הורודים יוצאים לחצר, והסגולים עושים מפגש והגשת חומרים. לאחר מכן, הלו"ז שוב מתאחד - לארוחת צהריים, התנקות והתארגנות, ומעבר למנוחה במזרנים!
 
@@ -78,8 +78,6 @@ date: 2021-10-21T19:05:22.865Z
  **שבת שלום!**
 
 **צוות שכבת הצעירים - חוה, מיכל, שיר, בר, עדי, חולוד, רותם ורוני**
-
- 
 
 ## שכבת הבוגרים
 
@@ -99,6 +97,8 @@ date: 2021-10-21T19:05:22.865Z
 במפגש קראנו את הספר "על עלה ועל אלונה" מאת שירה גפן. שמנו לב לכל סימני הסתיו באיורים המרתקים של דוד פולונסקי. ראינו את הרוח החזקה שמזיזה את הנדנדה בגינה, מעיפה כובעים, צעיפים ואת העלים שעל האדמה. התבוננו בעלים הנושרים מהעץ ומחליפים את צבעם מירוק לצהבהב, לכתום ולבסוף כשהם על האדמה הם הופכים לחומים. כך למדנו סימן נוסף לסתיו, והוא עלי השלכת. גם פגשנו באחד האיורים את הנחליאלי שמגיע לבקר אותנו בעונה זו בשנה. הילדימות ידעו לזהות את הנחליאלי, דרך האזנה לשיר [נחליאלי קטן](https://youtu.be/OaqHSxL9ZoQ) - יש לו זנב ארוך, וסינור שחור על החזה. 
 
 ממש כיף לראות את הילדימות מיישמים ומבינים ומעמיקים בכל דבר שאנחנו לומדים, וזה בא לידי ביטוי לא רק בתוכן הסתיו, אלא גם בכישורי היום-יום שלנו. למשל, התחלנו לדבר הרבה על הסביבה שלנו. אנחנו הולכים בחצר ורואים לכלוך על הדשא - מה נעשה? נרים את הלכלוך, ומייד נזרוק לפח. אפשר לראות את הילדימות מרימים לכלוך וזורקים כבר כמעט בלי לחשוב על כך. הגעתי לשירותים ולא היה סבון בכיור! מה אעשה? אראה למחנכת ואבקש סבון - כך אני דואגת לעצמי לידיים נקיות, וגם לחברימות! ואם אני עובר במסדרון ויש תיק שנפל באמצע ומפריע לתנועה? כמובן נרים וננסה לתלות! הילדימות כבר עושים חלק גדול מהדברים האלה בעצמם - וגם לומדים להשליך זאת על מצבים אחרים ולפעול בהתאם, כי הם פשוט אדירים. 
+
+![](/assets/pics/uploads/מסדרים-ועוזרים-בוגרים.jpeg "מסדרים בעבודת צוות")
 
  בשבוע הבא נמשיך להעמיק במאפייני הסתיו,
 
