--- a/content/weekly-update/איך-נזהה-את-הסתיו-נשתמש-בחושים.md
+++ b/content/weekly-update/איך-נזהה-את-הסתיו-נשתמש-בחושים.md
@@ -12,8 +12,6 @@ date: 2021-10-29T11:33:40.474Z
 
 **אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
 
-
-
 ## שכבת הצעירים
 
 השבוע המשכנו לחקור את השלכת, וממש שמחנו לקבל את ההפתעות שאספתם לנו מן הטבע! נמשיך לספר על כך, אך קודם כל, כמה הודעות:
@@ -42,8 +40,6 @@ date: 2021-10-29T11:33:40.474Z
 
 **צוות שכבת הצעירים - שיר, רותם, עדי, מיכל, חולוד, חוה ובר**
 
- 
-
 ## שכבת הבוגרים
 
 עוד שבוע סתוי ומהנה עבר עלינו בגן. המשכנו להעמיק בצבעי הסתיו והשלכת, יצרנו בחומרים, קראנו סיפורים, שרנו, רקדנו ודיברנו רבות על חברות, הגוף שלי והסביבה. הלמידה שלנו מתרחשת לאורך כל היום: כשאנחנו בדרכנו לגן פתאום מוצאים עלה יבש על המדרכה, כשהשמש מבצבצת בין העננים בצהריים ואנו פושטים את השכבה הארוכה בחצר, כשחבר מקבל מכה ואני מלווה אותו לשתות מים, כשאנחנו מתארגנים אחרי מנוחת הצהריים ואני עוזר לחבר לנעול נעליים, ועוד מחוות קטנות נוספות שמשאירות אותנו המחנכות עם חיוך נמס בצד. 
@@ -58,6 +54,8 @@ date: 2021-10-29T11:33:40.474Z
  **בחזרה לעדכון:** 
 
 בהמשך לשבוע הקודם בו התמקדנו בסיפור "על עלה ועל אלונה" מאת שירה גפן, וגילינו שהשלכת היא סימן נוסף לסתיו - השבוע חקרנו בעזרת החושים שלנו עלים יבשים וטריים. הכל התחיל בארגז קרטון עם שמיכת בד מעליו, לא ידענו מה יש בפנים כי הארגז אטום, וחשבנו איך אפשר לגלות מה מסתתר שם? אז ניערנו ושקשקנו את הארגז, שמענו רעש כזה עדין אבל היה ממש קשה לפענח מה זה. אחר כך, הכנסנו את הידיים מתחת לשמיכה ומיששנו. הרגשנו משהו חלק, וגם משהו מקומט, שאלנו האם זה משהו רטוב או יבש? האם זה קר, חם או נעים? האם זה רך או קשה? אחרי כל מיני ניחושים מצחיקים, הורדנו את השמיכה וראינו מלא עלים בצבעים וגדלים שונים. חלקם ירוקים, חלקם צהובים, אחרים חומים וכמה בודדים כתמתמים. היו גם כאלה מיוחדים ששילבו מספר צבעים בעלה אחד כמו ירוק וצהוב, או צהוב וחום.  לבסוף הרחנו את העלים, ובדקנו מה קורה כשאנחנו מועכים אותם בין כפות הידיים? האם יש הבדל בין העלים הירוקים לחומים? 
+
+![](/assets/pics/uploads/עלים-בוגרים.jpeg)
 
 בעקבות הספר "לילה חשוך אחד" מאת אורה איל, דיברנו על כך שהיום מתקצר והלילה מתארך. איך אנחנו יודעים? כי פתאום כשאנחנו עוד משחקים בגינה, השמש יורדת והלילה מגיע. שאלנו, איזה צבע יש ליום? איזה צבע ללילה? אור מול חושך, לבן מול שחור. בחדר האומנות מיינו את צבעי הפנדה לפי צבעים חשוכים וצבעים מאירים. את הכחול, האפור, הירוק והשחור אספנו לתוך קערה אחת. ואילו את הצהוב, כתום, ורוד והלבן שמנו בקערה נפרדת. בשלב הראשון צבענו בצבעים החשוכים את הדף, ניסינו לכסות את כולו, וגם מרחנו בעזרת האצבעות את הפנדה. בשלב השני, הדבקנו קרעי נייר בצבעים מאירים (לבן וצהוב) על הדף. בסוף היצירה, ממש ראינו כיצד הצבעים הבהירים בולטים מעל הצבעים הכהים. 
 
