--- a/content/team/זיו-רייכרט.md
+++ b/content/team/זיו-רייכרט.md
@@ -1,16 +1,15 @@
 ---
-title: גבי דיוויס
+title: גבי
 firstname: "גבי "
 lastname: דיוויס
 img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_87.jpg
 index: 13
 ---
-
 **גבי דיוויס, בת 31 - קפטנית**
 
-**חמש שנות נסיון בגני ילדים - שנה ראשונה בגן **
+**6 שנים בתחום חינוך הגיל הרך**
 
----
+- - -
 
 כשאני חושבת על זה, התפקיד היחיד שהיה לי אי פעם הוא לעבוד עם ילדים. במהלך השנים זכיתי לעבוד עם ילדות וילדים בכל הגילאים: מתינוקות ועד בני נוער בבתי ספר, קייטנות וגני ילדים. בכל משרה למדתי משהו חדש, רכשתי מיומנויות, ואתגרתי את עצמי להיות טובה יותר.
 
