Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -5,9 +5,8 @@ lastname: אלחדיף
 img: /img/pics/חן.jpeg
 index: 7
 ---
+**חן אלחדיף, בת 33 - מנהלת המטבח** 
 
-**חן אלחדיף, בת 32 - מנהלת המטבח **
-
-**בוגרת לימודי פסיכותרפיה גופנית - שנה רביעית בגן**
+**בוגרת לימודי פסיכותרפיה גופנית**
 
 חן המכונה באוז'ה היא חברת ילדות של אחינועם ומככבת כבשלנית הבית בגן שלנו. בנוסף ללימודי הפסיכותרפיה, לחן תואר ראשון בלימודי מזרח אסיה ואמנות רב-תחומית. מעבר לידי הזהב וליכולות הבישול, האפייה והיצירה המופלאות שלה, בתפקידה הבלתי פורמאלי, היא גם "הפסיכולוגית" של צוות הגן ומקרבת הלבבות של הקהילה שלנו.
