Update הצוות “ישראל-ישראלי”

--- a/content/team/ישראל-ישראלי.md
+++ b/content/team/ישראל-ישראלי.md
@@ -5,12 +5,11 @@ lastname: "שפר "
 img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-32.jpg
 index: 11
 ---
-
 **רוני שפר, בת 23 - מחנכת מחליפה**
 
-**המתופפת האגדית של להקת "הזאבות", אומנית פלסטית. חמש שנים בחינוך - שנה ראשונה בגן**
+**מתופפת להקת "הזאבות", אומנית פלסטית. 6 שנים בתחום החינוך**
 
----
+- - -
 
 ההיכרות הראשונה שלי עם תחום החינוך החלה כשהדרכתי שכבה צעירה ממני כשלמדתי בבית אקשטיין. אני וחברותי היינו ''פליטות'' של מערכת החינוך המסורתית והרגשנו תחושת מחויבות והזדהות עמוקה עם התלמידים הצעירים שגם כן למדו במסגרת של חינוך מיוחד. החוויה הזו, בסופו של דבר, הובילה אותי להצטרף ל''תנועת תרבות'' בה נחשפתי באופן מעמיק לפילוסופיות ושיטות חינוך שונות. עבדתי בתקופה הזאת כמדריכה לכיתות ה'-ו' וגם לתלמידי תיכון. לאחר מכן שירתתי בצבא במסלול נח''ל כמורה חיילת שם עבדתי עם נוער בסיכון.
 
