Update הצוות “נופר”

--- a/content/team/נופר.md
+++ b/content/team/נופר.md
@@ -5,14 +5,10 @@ lastname: "תנא בן-דוד "
 img: /assets/pics/uploads/faceapp_1634404016873.jpg
 index: 6
 ---
-נופר תנא בן-דוד, בת 40- מחנכת
+**נופר תנא בן-דוד, בת 40 - מחנכת**
 
-בעלת תואר ראשון בעבודה סוציאלית בהצטיינות יתרה ופסיכותרפיסטית בטיפול במשחקים- חמש שנות נסיון בחינוך לגיל הרך. 
+**בעלת תואר ראשון בעבודה סוציאלית בהצטיינות יתרה ופסיכותרפיסטית בטיפול במשחקים - חמש שנות נסיון בחינוך לגיל הרך**
 
- 
+- - -
 
 לתחום החינוך לגיל הרך הגעתי מתוך חוויה אישית. שהיתי וחינכתי את בני בביתי עד גיל שנה וחצי ובאותה תקופה מצאתי את עצמי מקימה קבוצת אמהות לילדים בגילאים הרכים ומתחברת לילדימות נוספים בגילאים הרכים. תמיד הרגשתי שיש לי חיבור לילדים ונוער בגילאים שונים. תחילה ניסיתי להשפיע מהמקום הטיפולי והרגשי מתוך מסגרות חינוכיות שונות. בשנים האחרונות הבנתי אף יותר מתוך המגע שלי עם השדה החינוכי עד כמה השילוב בין חינוך וטיפול רגשי הוא משמעותי. אני מאמינה שחלק מתפקידנו כמחנכול לגיל הרך הוא לפתח את החוסן האישי של הילדים והילדות כבר מהגילאים הרכים כדי לבנות יחד איתם את הבסיס שיאפשר להם ולהן לצמוח ולפרוח.
-
-
-
-<!--EndFragment-->
