--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -5,14 +5,12 @@ lastname: ליידריך
 img: /img/pics/image_6487327.jpg
 index: 15
 ---
+**ענת ליידריך, בת 32 - מחנכת**
 
-ענת ליידריך, בת 31- מחנכת
+**בוגרת תואר להוראה ואמנות במכללת אורנים, שלוש שנים בתחום הגיל הרך**
 
-**סטודנטית בשנה רביעית להוראה ואמנות במכללת אורנים- שנה ראשונה בגן**
+- - -
 
----
+לפני כשנתיים התחלתי לעבוד עם הגיל הרך לראשונה כסייעת בצהרון בעמק בו גדלתי ובגן בקיבוץ. גיליתי עולם תוכן חינוכי מדהים וקסום. זו זכות גדולה עבורי ללוות את האנשים הקטנים האלה, לחזות בהתפתחות הראשונית של נפש האדם ולצפות בהתפעלות הראשונית מהמפגש עם העולם שאנו הבוגרים כבר מזמן שכחנו מהם.
 
-לפני כשנה התחלתי לעבוד עם הגיל הרך לראשונה כסייעת בצהרון בעמק בו גדלתי ובגן בקיבוץ. \
-גיליתי עולם תוכן חינוכי מדהים וקסום. זו זכות גדולה עבורי ללוות את האנשים הקטנים האלה, לחזות בהתפתחות הראשונית של נפש האדם ולצפות בהתפעלות הראשונית מהמפגש עם העולם שאנו הבוגרים כבר מזמן שכחנו מהם.
-
-אני אוהבת לחלוק עם הילדימות רגעים של צחוק. צחוק של ילדים זה צחוק אמיתי תמים כנה ומרגש. כיף לי לגרום להם לצחוק ולהיות שמחים במקום בו הם נמצאים ועל הדרך ללמד וללמוד ביחד דברים חדשים מרגשים ומעניינים.
+אני אוהבת לחלוק עם הילדימות רגעים של צחוק. צחוק של ילדים זה צחוק אמיתי, תמים, כנה ומרגש. כיף לי לגרום להם לצחוק ולהיות שמחים במקום בו הם נמצאים ועל הדרך ללמד וללמוד ביחד דברים חדשים מרגשים ומעניינים.
