Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -5,21 +5,11 @@ lastname: "טרגרמן "
 img: /assets/pics/uploads/whatsapp-image-2021-10-16-at-19.45.24.jpeg
 index: 9
 ---
-<!--StartFragment-->
+**רותם טרגרמן, בת 23 - מחנכת** \
+**5 שנות ניסיון בחינוך לגיל הרך**
 
-רותם טרגרמן, בת 23- מחנכת \
-5 שנות ניסיון בחינוך לגיל הרך- שנה ראשונה בגן
+- - -
 
-כנערה התחלתי לעבוד במערכת החינוך לגיל הרך במושב בו גדלתי והייתי פעילה חברתית ומדריכה בתנועות נוער. מאז ועד היום אני עוסקת בחינוך ושואפת להמשיך לעסוק בתחום זה בהמשך.
+כנערה התחלתי לעבוד במערכת החינוך לגיל הרך במושב בו גדלתי והייתי פעילה חברתית ומדריכה בתנועות נוער. מאז ועד היום אני עוסקת בחינוך ושואפת להמשיך לעסוק בתחום זה בהמשך. ילדים בשבילי הם שמחה. אני אוהבת את שמחת החיים שהם מפיצים לעולם, את האהבה שהם מחלקים לסובבים אותם ואת החקרנות האינסופית שלהם. יש בהם תמימות וטוהר שקוסמים לי. אני מרגישה שעם ילדים אני יכולה להיות מי שאני באמת, בלי מסכות, באותנטיות המרבית.
 
-ילדים בשבילי הם שמחה. אני אוהבת את שמחת החיים שהם מפיצים לעולם, את האהבה שהם מחלקים לסובבים אותם ואת החקרנות האינסופית שלהם. יש בהם תמימות וטוהר שקוסמים לי. אני מרגישה שעם ילדים אני יכולה להיות מי שאני באמת, בלי מסכות, באותנטיות המרבית.
-
-
-
-החיבור שלי לחינוך מגיע מתוך ראיית האחר והרצון שלי שהילדים יקבלו את החינוך הטוב ביותר- מלא באהבה, הקשבה ורצון להבין את הצרכים שלהם. העיסוק בחינוך לגיל הרך נותן לי תחושת סיפוק עצומה ולכן אני מרגישה שאני נמצאת במקום שמתאים לי.
-
- 
-
-
-
-<!--EndFragment-->
+החיבור שלי לחינוך מגיע מתוך ראיית האחר והרצון שלי שהילדים יקבלו את החינוך הטוב ביותר - מלא באהבה, הקשבה ורצון להבין את הצרכים שלהם. העיסוק בחינוך לגיל הרך נותן לי תחושת סיפוק עצומה ולכן אני מרגישה שאני נמצאת במקום שמתאים לי.
